# roulette

./: .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md
data/: 6_mev_spectrum.json  compounds.json  soft_tissue_icru_44.json  soft_tissue_icru_44.txt
examples/: run.json
include/: real_function.h
include/distributions/: built_in.h  rejection_sampling.h
include/roulette/: affine_transformation.h  beam.h  beamlet.h  beamlet_particle_generator.h  beamlet_particle_generator_impl.h  chi_square_goodness_of_fit.h  compound.h  compound_table.h  controller.h  density_compound_map.h  density_grid.h  distribution.h  dose_calculation.h  dose_writer.h  electron.h  element.h  event.h  four_momentum.h  histogram.h  i_voxel_grid.h  interaction_function.h  irregular_voxel_grid.h  job_queue.h  json.h  lorentz_transform.h  material.h  math.h  matrix_three_tensor.h  non_uniform_linear_interpolation.h  particle.h  particle_simulation.h  pdf.h  periodic_table.h  phantom.h  photon.h  pointwise_three_tensor.h  random_generator.h  real_function.h  regular_voxel_grid.h  rotation_matrix.h  (+11 more)
include/roulette/distributions/: built_in.h  compton_scattering.h  dirac_delta.h  exponential.h  fluence_distribution.h  inverse_cdf_sampling.h  parametric_uniform.h  probability_sampling.h  probability_sampling_impl.h  rejection_sampling.h  rejection_sampling_impl.h  spectrum.h  spherical.h  sum_of_distributions.h  sum_of_distributions_impl.h  uniform.h
include/roulette/geometries/: circle.h  ellipse.h  geometry.h  geometry_factory.h  hemispherical_shell.h  point.h  rectangle.h  spherical_shell.h
include/roulette/sources/: beam_source.h  beamlet_source.h  bifocal_source.h  composite_source.h  dirac_delta_source.h  source.h  source_factory.h
src/: main.cpp  random_generator.cpp  real_function.cpp
src/distributions/: rejection_sampling.cpp
src/roulette/: affine_transformation.cpp  beam.cpp  beamlet.cpp  chi_square_goodness_of_fit.cpp  compound.cpp  compound_table.cpp  controller.cpp  density_compound_map.cpp  density_grid.cpp  dose_calculation.cpp  dose_writer.cpp  electron.cpp  element.cpp  event.cpp  four_momentum.cpp  histogram.cpp  i_voxel_grid.cpp  interaction_function.cpp  irregular_voxel_grid.cpp  job_queue.cpp  json.cpp  lorentz_transform.cpp  material.cpp  math.cpp  matrix_three_tensor.cpp  non_uniform_linear_interpolation.cpp  particle.cpp  particle_simulation.cpp  pdf.cpp  periodic_table.cpp  phantom.cpp  photon.cpp  pointwise_three_tensor.cpp  random_generator.cpp  real_function.cpp  regular_voxel_grid.cpp  rotation_matrix.cpp  simulation.cpp  source_dose.cpp  source_simulation.cpp  (+6 more)
src/roulette/distributions/: compton_scattering.cpp  dirac_delta.cpp  exponential.cpp  fluence_distribution.cpp  inverse_cdf_sampling.cpp  parametric_uniform.cpp  rejection_sampling.cpp  spectrum.cpp  spherical.cpp  uniform.cpp
src/roulette/geometries/: ellipse.cpp  geometry_factory.cpp  hemispherical_shell.cpp  point.cpp  rectangle.cpp  spherical_shell.cpp
src/roulette/sources/: beam_source.cpp  beamlet_source.cpp  bifocal_source.cpp  composite_source.cpp  dirac_delta_source.cpp  source.cpp  source_factory.cpp
test/: affine_transformation_test.h  beamlet_test.h  compound_table_test.h  density_grid_test.h  dose_calculation_test.h  electron_test.h  four_momentum_test.h  interaction_function_test.h  irregular_voxel_grid_test.h  math_test.h  non_uniform_linear_interpolation_test.h  pdf_test.h  phantom_test.h  photon_test.h  real_function_test.h  regular_voxel_grid_test.h  rotation_matrix_test.h  simulation_test.h  super_linear_interpolation_test.h  test_helper.h  tests.cpp  true_test.h  voxel_grid_test.h
test/distributions/: compton_scattering_test.h  exponential_test.h  parametric_uniform_test.h  rejection_sampling_test.h  uniform_test.h
test/geometries/: ellipse_test.h  geometry_factory.h  geometry_factory_test.h  hemispherical_shell_test.h  point_test.h  rectangle_test.h  spherical_shell_test.h
test/sources/: bifocal_source_test.h
test/support/: test_multiple_times.h
